# skiing-go-

./: CMakeLists.txt  README.md  skiing go项目报告.docx
include/: main.h
src/: CMakeLists.txt  main.c
